--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <a href="#ABT">ABOUT US</a>
             </div>
         </section>
-        <section>
+        <section id="sihn">
 			<h2>Sign Up for Daily News!</h2>
             <br>
             <form id="for">
